Archive2/7b/397801874b8501/output
main.cpp: In function 'std::string foo()':
main.cpp:4:17: error: ambiguating new declaration of 'std::string foo()'
 std::string foo() { return "0"; }
                 ^
main.cpp:3:5: note: old declaration 'int foo()'
 int foo() { return 0; }
     ^
main.cpp: In function 'int main()':
main.cpp:6:18: warning: unused variable 'a' [-Wunused-variable]
 int main() { int a=foo(); }
                  ^
